# DeathStarBench

./: .gitignore
socialNetwork/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  social_network.thrift
socialNetwork/cmake/: CompileProtos.cmake  FindgRPC.cmake
socialNetwork/config/: rendezvous-config.json
socialNetwork/docker/mongodb-delayed/: Dockerfile
socialNetwork/gen-py/social_network/: UniqueIdService.py
socialNetwork/nginx-web-server/conf/: nginx.conf
socialNetwork/rendezvous/: CMakeLists.txt
socialNetwork/rendezvous/include/: monitor.h  monitor_mongodb.h  rendezvous.h  storage_mongodb.h
socialNetwork/rendezvous/src/: monitor.cpp  monitor_mongodb.cpp  storage_mongodb.cpp
socialNetwork/rendezvous/utils/: logger.h
socialNetwork/src/: CMakeLists.txt  logger.h  utils.h  utils_mongodb.h
socialNetwork/src/AntipodeOracle/: CMakeLists.txt
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h
socialNetwork/src/MediaService/: CMakeLists.txt
socialNetwork/src/PostStorageService/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h
socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h
socialNetwork/src/UrlShortenService/: CMakeLists.txt
socialNetwork/src/UserMentionService/: CMakeLists.txt
socialNetwork/wrk2/: wrk
(+17 files in other folders)
